contact us button spacing fix part2

--- a/src/App.css
+++ b/src/App.css
@@ -532,9 +532,10 @@
 	}
 
 	.contactus-button {
-		width: 104px;
-		margin-right: 20px;
+		width: 104px !important;
+		margin-right: 20px !important;
 		margin-left: 20px;
+		font-size: 12px !important;
 	}
 
 	.section {
